Fix render problem with single-day events that do not contain enough text to wrap to a second line.

--- a/htdocs/sites/all/themes/wk_bartik/css/wk_bartik.css
+++ b/htdocs/sites/all/themes/wk_bartik/css/wk_bartik.css
@@ -415,8 +415,13 @@ blockquote {
     max-height: 38px !important;
   }
 
+  td.single-day {
+    min-height: 38px !important;
+  }
+
+  td.single-day div.monthview,
   td.multi-day div.monthview {
-    height: 38px !important;
+    min-height: 38px !important;
   }
 
   td.multi-day div.monthview .continues {
